[project]
name = "games-project-vilnikova"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["prompt"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["VD_games"]

[dependency-groups]
dev = [
    "ruff>=0.14.4",
]

[project.scripts]
VD_games = "VD_games.scripts.VD_main:main"
VD_even = "VD_games.scripts.VD_even:main"
VD_calc = "VD_games.scripts.VD_calc:main"
VD_gcd  = "VD_games.scripts.VD_gcd:main"
VD_progression = "VD_games.scripts.VD_progression:main"
VD_prime = "VD_games.scripts.VD_prime:main"
